add intro - related work

--- a/report_and_presentation/content_report/shortcuts.sty
+++ b/report_and_presentation/content_report/shortcuts.sty
@@ -21,8 +21,10 @@
 \newcommand{\red}[1]{\textcolor{red}{#1}}
 
 %%%%
-\newcommand{\enscond}[2]{\lbrace #1, #2 \rbrace}
+\newcommand{\ens}[2]{\lbrace #1, #2 \rbrace}
 \newcommand{\norm}[1]{\|#1\|}
 
 \newcommand{\RR}{\mathbb{R}}
+\newcommand{\umin}[1]{\underset{#1}{\min}\;}
+\newcommand{\umax}[1]{\underset{#1}{\max}\;}
 \newcommand{\uargmin}[1]{\underset{#1}{argmin}\;}
