--- a/report_and_presentation/content_report/theme.sty
+++ b/report_and_presentation/content_report/theme.sty
@@ -89,5 +89,4 @@
 \newcommand{\email}[1]{\href{mailto:#1}{#1}}
 
 % BIBLIO
-\usepackage[style=ieee]{biblatex}
-\addbibresource{biblio.bib}
+\usepackage[style=chem-angew]{biblatex}
