--- a/report_and_presentation/report.tex
+++ b/report_and_presentation/report.tex
@@ -1,6 +1,7 @@
 \documentclass[a4paper, 11pt]{article}
 \usepackage{content_report/theme}
 \usepackage{content_report/shortcuts}
+\addbibresource{biblio.bib}
 
 \title{Stochastic Wasserstein Barycenters (Computational Optimal Transport Project)}
 \author{Inès VATI \email{ines.vati@eleves.enpc.fr} \\ MVA, ENS Paris Saclay }
