--- a/report_and_presentation/content_report/5ccl_perspectives.tex
+++ b/report_and_presentation/content_report/5ccl_perspectives.tex
@@ -3,3 +3,5 @@
 Conclusion and perspective (~1 page)
 Summary of the result obtained: pros and cons (limitation, problems, error in the articles, etc)
 Possible improvement/extension
+
+Log-domain Sinkhorn 
