--- a/report_and_presentation/report.tex
+++ b/report_and_presentation/report.tex
@@ -21,14 +21,11 @@ Which contributions (theory, numerics, etc) ?
 \newpage
 
 \input{content_report/1introduction.tex}
+\input{content_report/2method.tex}
 
-\section{Presentation of the method}
-Main body (~10 pages) : 
-Presentation of the method(s).  \cite{claici_stochastic_2018}
-\subsection{Theoretical guarantees}
-Theoretical guarantees. 
-\subsection{Numerical implementation / Experiments }
-Numerics. 
+\input{content_report/3algoconv.tex}
+ 
+\input{content_report/4experiences.tex}
 
 \input{content_report/5ccl_perspectives.tex}
 \input{content_report/6course_connection.tex}
