--- a/report_and_presentation/content_report/theme.sty
+++ b/report_and_presentation/content_report/theme.sty
@@ -10,8 +10,7 @@
 \fi
 
 
-
-% \usepackage{float}
+\usepackage{float}
 % \floatplacement{figure}{H} % forces figures to be placed at the correct location
 % \usepackage{xcolor} % Allow colors to be defined
 % \usepackage{enumerate} % Needed for markdown enumerations to work
