explain comparative methods

--- a/report_and_presentation/biblio.bib
+++ b/report_and_presentation/biblio.bib
@@ -198,3 +198,35 @@
 	urldate = {2024-01-14},
 	date = {1983},
 }
+
+@misc{cuturi_fast_2014,
+	title = {Fast Computation of Wasserstein Barycenters},
+	url = {http://arxiv.org/abs/1310.4375},
+	abstract = {We present new algorithms to compute the mean of a set of empirical probability measures under the optimal transport metric. This mean, known as the Wasserstein barycenter, is the measure that minimizes the sum of its Wasserstein distances to each element in that set. We propose two original algorithms to compute Wasserstein barycenters that build upon the subgradient method. A direct implementation of these algorithms is, however, too costly because it would require the repeated resolution of large primal and dual optimal transport problems to compute subgradients. Extending the work of Cuturi (2013), we propose to smooth the Wasserstein distance used in the definition of Wasserstein barycenters with an entropic regularizer and recover in doing so a strictly convex objective whose gradients can be computed for a considerably cheaper computational cost using matrix scaling algorithms. We use these algorithms to visualize a large family of images and to solve a constrained clustering problem.},
+	number = {{arXiv}:1310.4375},
+	publisher = {{arXiv}},
+	author = {Cuturi, Marco and Doucet, Arnaud},
+	urldate = {2024-01-14},
+	date = {2014-06-17},
+	eprinttype = {arxiv},
+	eprint = {1310.4375 [stat]},
+	keywords = {Statistics - Machine Learning},
+	file = {arXiv.org Snapshot:files/1267/1310.html:text/html;Full Text PDF:files/1268/Cuturi et Doucet - 2014 - Fast Computation of Wasserstein Barycenters.pdf:application/pdf},
+}
+
+@article{mccann_convexity_1997,
+	title = {A Convexity Principle for Interacting Gases},
+	volume = {128},
+	issn = {0001-8708},
+	url = {https://www.sciencedirect.com/science/article/pii/S0001870897916340},
+	doi = {10.1006/aima.1997.1634},
+	abstract = {A new set of inequalities is introduced, based on a novel but natural interpolation between Borel probability measures {onRd}. Using these estimates in lieu of convexity or rearrangement inequalities, the existence and uniqueness problems are solved for a family of attracting gas models. In these models, the gas interacts with itself through a force which increases with distance and is governed by an equation of {stateP}=P(ϱ) relating pressure to density.P(ϱ)/ϱ{\textgreater}(d−1)/dis assumed non-decreasing for ad-dimensional gas. By showing that the internal and potential energies for the system are convex functions of the interpolation parameter, an energy minimizing state—unique up to translation—is proven to exist. The concavity established for ¶ρt¶−p/dqas a function oft∈[0,1] generalizes the Brunn–Minkowski inequality from sets to measures.},
+	pages = {153--179},
+	number = {1},
+	journaltitle = {Advances in Mathematics},
+	shortjournal = {Advances in Mathematics},
+	author = {{McCann}, Robert J.},
+	urldate = {2024-01-15},
+	date = {1997-06-01},
+	file = {ScienceDirect Snapshot:files/1273/S0001870897916340.html:text/html},
+}
