--- a/report_and_presentation/report.tex
+++ b/report_and_presentation/report.tex
@@ -32,4 +32,52 @@ Which contributions (theory, numerics, etc) ?
 
 \printbibliography
 
+\newpage
+\section*{Appendices}
+\subsection*{Barycenters computed with POT toolbox}
+\begin{figure}[H]
+    \begin{subfigure}{.5\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{figures/ot_barycenter_reg0.005.png}
+        \caption{$\epsilon=0.005$}
+    \end{subfigure}
+    \begin{subfigure}{.5\textwidth}
+        \centering
+        \includegraphics[ width=\textwidth]{figures/ot_barycenter_reg0.01.png}
+        \caption{$\epsilon=0.01$}
+    \end{subfigure}
+    \caption{Free support barycenters computed with POT toolbox}
+    \label{pot1}
+\end{figure}
+
+\begin{figure}
+    \begin{subfigure}{0.5\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{figures/ot_barycenter_reg0.05.png}
+        \caption{$\epsilon=0.05$}
+    \end{subfigure}
+    \begin{subfigure}{.5\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{figures/ot_barycenter_reg0.1.png}
+        \caption{$\epsilon=0.1$}
+    \end{subfigure}
+    \caption{Free support barycenters computed with POT toolbox}
+    \label{pot2}
+\end{figure}
+
+\begin{figure}
+    \begin{subfigure}{0.5\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{figures/ot_barycenter_reg0.5.png}
+        \caption{$\epsilon=0.5$}
+    \end{subfigure}
+    \begin{subfigure}{.5\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{figures/ot_barycenter_reg1.png}
+        \caption{$\epsilon=1$}
+    \end{subfigure}
+    \caption{Free support barycenters computed with POT toolbox}
+    \label{pot3}
+\end{figure}
+
 \end{document}
