--- a/report_and_presentation/content_report/shortcuts.sty
+++ b/report_and_presentation/content_report/shortcuts.sty
@@ -30,6 +30,7 @@
 \newcommand{\ens}[2]{\lbrace #1, #2 \rbrace}
 \newcommand{\abs}[1]{\|#1\|}
 \newcommand{\norm}[1]{\left\lVert#1\right\rVert}
+\newcommand{\intinter}[2]{[\![ #1, #2 ]\!]}
 
 \newcommand{\RR}{\mathbb{R}}
 \newcommand{\E}{\mathbf{E}} % expetation
