--- a/report_and_presentation/content_report/6course_connection.tex
+++ b/report_and_presentation/content_report/6course_connection.tex
@@ -1,3 +1,9 @@
 \section{Connection with the course}
 
-What are the notions/results/algorithms presented in the course that are used or related to the one presented in this paper?
+This study directly aligns with the course material. The article \cite{claici_stochastic_2018} is based on the notion of Wasserstein distance introduced during the course. 
+
+Additionally, we have conducted a comparative analysis of the proposed method with two approaches presented in the course.
+
+We employed the Sinkhorn algorithm to calculate the barycenter of two measures in both 1-D and 2-D. In the case of 1-D, we have also computed the McCann's interpolation between two continuous measures, as depicted in Figure \ref{fig:sinkhorn_1D_2skew}.
+
+Regarding the results, we observed the same influence of the regularization parameter $\epsilon$ on the Sinkhorn algorithm, as illustrated in Figure \ref{fig:sinkhorn_1D_2skew}. 
