--- a/report_and_presentation/content_report/theme.sty
+++ b/report_and_presentation/content_report/theme.sty
@@ -59,7 +59,6 @@
 % \usepackage{mathrsfs}
 
 
-
 % Colors for the hyperref package
 \definecolor{urlcolor}{rgb}{0,.145,.698}
 \definecolor{linkcolor}{rgb}{.71,0.21,0.01}
@@ -80,7 +79,7 @@
 
 % \geometry{verbose,tmargin=1in,bmargin=1in,lmargin=1in,rmargin=1in}
 
-
+\usepackage{tabularx}
 
 % CUSTOM COMMANDS
 \usepackage{appendix}
