--- a/report_and_presentation/content_report/2method.tex
+++ b/report_and_presentation/content_report/2method.tex
@@ -18,7 +18,7 @@ To get the gradient, we need to compute the quantities
      &= \E_{y \sim \mu_j}\left[ \ones_{y\in V_{\phi_j}^i}\right] & & =\E_{y \sim \mu_j}\left[ y . \ones_{y\in V_{\phi_j^i}}\right] \\
 \end{align*}
 
-where $\ones$ indicates the indicator function of a set. In the derivative of \eqref{eq:obj}, the \textit{power cell} $V_{\phi_j}^i$ of point $x_i$ comes into play and is defined as follows \blue{link with voronoi cell !!!}
+where $\ones$ indicates the indicator function of a set. In the derivative of \eqref{eq:obj}, the \textit{power cell} $V_{\phi_j}^i$ of point $x_i$ comes into play and is defined as follows
 $$
 V_{\phi}^i = \ens{x\in\mathcal{X}}{d(x, x_i)^2 - \phi_i \leq d(x, x_{i'})^2 - \phi_{i'}, \forall i' }
 $$
@@ -47,7 +47,7 @@ at iteration $l$, where $\lambda$ is the step size. To improve performance, the 
     \begin{algorithmic}[1]
         \FOR {$j = 1, \dots, J$}
         \STATE $z^{(0)} \gets 0$
-        \WHILE {$\norm{\frac{\widehat{\partial F}}{\partial \phi_j}} > \epsilon_{ascent} $}
+        \WHILE {$\norm{\frac{\widehat{\partial F}}{\partial \phi_j}}_2^2 > \epsilon_{ascent} $}
         \STATE Compute $\hat{a}_j^i$ thanks to algorithm \ref{montecarlo}
         \STATE $z^{l+1} \gets \beta z^{(l)} + \widehat{\partial_{\phi_j}F}(\phi_j)$ \COMMENT{Nesterov acceleration}
         \STATE $\phi_j^{(l+1)} \gets \phi_j^{(l)} + \alpha z^{(l+1)}$
@@ -80,3 +80,25 @@ The algorithm \ref{ascent_snap} summarize the whole procedure.
         \RETURN Opitimized barycenter support $\Sigma^* = \lbrace x_i \rbrace_{i=1}^M$
     \end{algorithmic}
 \end{algorithm}
+
+
+\subsection{Theoretical guarantees}
+
+Well behavior of the algorithm is ensured for the following assumptions.
+\begin{enumerate}
+    \item \label{H1} At least one of the input distribution $\mu_j$ is absolutely continuous with respect to the Lebesgue measure.
+    \item The domain $\mathcal{X}$ is a compact subset of $\RR^d$.
+\end{enumerate}
+
+Under these conditions, the authors prove that the Algorithm \ref{ascent_snap} converges to a local minimum of the functional $F_{primal}$ for a step size equal to the inverse of the Lipschitz constant of the gradient of $F_{primal}$ given in \cite{claici_stochastic_2018}. $F_{primal}$ refers to the objective funciton of the primal problem defined in \eqref{eq:primal}. 
+
+The first assumption ensures the existence of a unique Wasserstein barycenter \cite{claici_stochastic_2018}. 
+
+However, empirical evidence presented by the authors indicates that their method converges even in cases where these assumptions are not met. \\ 
+
+Moreover, Let $\nu_M^*$ be a uniform measure supported on $M$ points that minimizes $\frac{1}{J}\sum_{j=1}^{J} W_2(\nu_M^*, \mu_j)$. Remind that $\nu$ denotes the true barycenter of the measures ${\mu_j}$. Since the Wasserstein distance metrizes the convergence in law, they have that $\nu_M^* \rightarrow \nu$.
+
+While the authors do not provide guarantees that the algorithm converges toward $\nu_M^*$, they show that the global minimizer of the objective efficiently approximate the true barycenter as $M \rightarrow \infty$. \\ 
+
+Furthermore, they theoretically establish that their algorithm monotonically decreases the objective of the primal problem \eqref{eq:primal}.
+
